--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "start": "react-scripts start",
     "dev": "vite --port=3000",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
@@ -21,6 +22,7 @@
     "react-dom": "^17.0.0 || ^18.0.0",
     "react-i18next": "^14.1.1",
     "react-icons": "^5.2.1",
+    "react-scripts": "^5.0.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.11"
   },
